<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_my_news"
            android:icon="@mipmap/ic_app"
            android:title="@string/my_news"/>
        <item
            android:id="@+id/nav_saved_news"
            android:icon="@drawable/ic_bookmark"
            android:title="@string/saved_for_later"/>
        <item
            android:id="@+id/nav_read_news"
            android:icon="@drawable/ic_history"
            android:title="@string/read_news"/>
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings"/>

        <item
            android:id="@+id/nav_stats"
            android:icon="@drawable/ic_statistics"
            android:title="@string/statistics"/>

        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_info"
            android:title="@string/about"/>
    </group>

    <item
        android:id="@+id/nav_header_favorites"
        android:title="@string/favorites">

        <menu xmlns:android="http://schemas.android.com/apk/res/android"/>

    </item>

    <item
        android:id="@+id/nav_header_sites"
        android:title="@string/all_sites">

        <menu xmlns:android="http://schemas.android.com/apk/res/android"/>

    </item>

</menu>
